--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
     "puppeteer": "^22.15.0",
     "qs": "^6.13.0"
